Adding endpoint to get Datancanvas by name
