# openapi/datacanvas-service.yml
@@ -75,6 +75,47 @@ paths:
           schema:
             type: string
 
+
+  /name/{name}:
+    get:
+      security:
+        - Bearer: [ ]
+      summary: Get a data-canvas by name
+      description: Get a data-canvas from the Pennsieve database by looking up the name.
+      operationId: getByName
+      produces:
+        - application/json
+      x-scala-package: datacanvas
+      parameters:
+        - name: name
+          in: path
+          required: true
+          description: the data-canvas unique identifier
+          schema:
+            type: string
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                x-scala-type: com.pennsieve.datacanvas.models.DatacanvasDTO
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+          schema:
+            type: string
+        404:
+          description: resource not found
+          schema:
+            type: string
+        500:
+          description: Internal error
+          schema:
+            type: string
+
 components:
   securitySchemes:
     Bearer:
